--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test-typescript-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://ovederax.github.io/json-translate-site/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -18,11 +19,16 @@
     "react-scripts": "3.4.3",
     "typescript": "^3.8.0"
   },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+	"predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
